--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -201,7 +201,7 @@
     <div class="section_title" id="profile_title"></div>
 
     <div class="profile_console">
-      <div class="console_top">profile<span class="loading dots"></span></div>
+      <div class="console_top">Show profile process <span class="loading dots2"></span></div>
 
       <div class="console">
         <div>岩見建汰</div>
