--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -206,12 +206,19 @@
       <div class="console">
         <div>岩見建汰</div>
         <div class="profile_image"><img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}"></div>
-        <div class="profile_text">青森県八戸市出身。現在は函館で大学院生をしております。</div>
-        <div class="profile_text">プログラミングには高校生の頃から触れてきました。</div>
-        <div class="profile_text">PBL(Project Based Learning)の振り返りに関する研究をしています。</div>
+        <div class="profile_text">青森県八戸市出身。函館で大学院生をしています。</div>
+        <div class="profile_text">プログラミングには高校生の時から触れてきました。</div>
+        <div class="profile_text">研究分野はPBL(Project Based Learning)の振り返りです。</div>
+        <div class="profile_text"></div>
         <div class="profile_text">言語：C, Swift, Java, JavaScript, HTML, CSS, python</div>
-        <div class="profile_text">趣味：写真撮影, 映画鑑賞, コーディング</div>
+        <div class="profile_text">資格：ITパスポート, 基本情報技術者試験, 応用情報技術者試験</div>
+        <div class="profile_text">趣味：コーディング, 写真撮影, 映画鑑賞</div>
+        <div class="profile_text"></div>
         <div class="profile_text">連絡先：b1013068@fun.ac.jp または iwami@pblsummit.jp</div>
+        <div class="profile_text">
+          <a href="https://www.facebook.com/kenta.iwami.5">Facebook Link</a>
+          <a href="https://github.com/kentaiwami">GitHub Link</a>
+        </div>
       </div>
     </div>
   </section>
