--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -27,6 +27,9 @@ a:hover {
 }
 
 
+/************************************************************
+                          view.index
+************************************************************/
 /*************** section1(cover) ***************/
 .cover {
   width: 100vw;
@@ -301,6 +304,13 @@ figure:hover figcaption {
   text-decoration: underline;
   margin-right: 10px;
 }
+
+
+/************************************************************
+                  view.engineer_work_detail
+************************************************************/
+
+
 
 /*************** @media ***************/
 @media screen and (max-width: 1200px) {
