profile_nameのクラスを新規作成

--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -57,7 +57,7 @@ a:hover {
   font-size: 10vmin;
 }
 
-.sub_title:before, .title:before , .section_title:before, .console_top:before, .profile_text:before {
+.sub_title:before, .title:before , .section_title:before, .console_top:before, .profile_text:before , .profile_name:before {
   content: "$ ";
 }
 
@@ -286,16 +286,22 @@ figure:hover figcaption {
 }
 
 .profile_image {
-  width: 40%;
-  /*position: absolute;*/
+  width: 100%;
   display: block;
-  /*top: 0;*/
+  margin: 0 auto;
   margin-bottom: 5vmin;
+  margin-top: 5vmin;
 }
 
+/* section1にてbefore擬似要素を追加 */
 .profile_text a {
   text-decoration: underline;
   margin-right: 10px;
+}
+
+/* section1にてbefore擬似要素を追加 */
+.profile_name {
+  font-size: 8vmin;
 }
 
 
