--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -197,7 +197,7 @@
       <div class="console_top">Show profile process <span class="loading dots2"></span></div>
 
       <div class="console">
-        <div class="profile_text">岩見建汰</div>
+        <div class="profile_name">岩見建汰</div>
         <div class="profile_image"><img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}"></div>
         <div class="profile_text">青森県八戸市出身。函館で大学院生をしています。</div>
         <div class="profile_text">プログラミングには高校生の時から触れてきました。</div>
