--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -113,9 +113,9 @@
       {% endfor %}
     </div>
 
-    <a class="engineer_works_more" href="{% url 'portfolio:engineer_works_all' %}">
+    <a class="link" href="{% url 'portfolio:engineer_works_all' %}">
       <div class="box">
-        <div class="engineer_works_more_after">more</div>
+        <div>more</div>
         <div class="bd10 bd">
           <div class="bdT"></div>
           <div class="bdB"></div>
