consoleのクラス名を変更

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -193,22 +193,22 @@
   <section class="container" id="4">  <!--Profile-->
     <div class="section_title" id="profile_title"></div>
 
-    <div class="profile_console">
+    <div class="console_area">
       <div class="console_top">Show profile process <span class="loading dots2"></span></div>
 
       <div class="console">
-        <div class="profile_name">岩見建汰</div>
-        <div class="profile_image"><img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}"></div>
-        <div class="profile_text">青森県八戸市出身。函館で大学院生をしています。</div>
-        <div class="profile_text">アプリやサービス等を創ることが大好きです。</div>
-        <div class="profile_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
-        <div class="profile_text"></div>
-        <div class="profile_text">言語：C, Swift, Java, JavaScript, HTML, CSS, python</div>
-        <div class="profile_text">資格：ITパスポート, 基本情報技術者試験, 応用情報技術者試験</div>
-        <div class="profile_text">趣味：コーディング, 写真撮影, ゲーム, 映画鑑賞</div>
-        <div class="profile_text"></div>
-        <div class="profile_text">連絡先：b1013068@fun.ac.jp または iwami@pblsummit.jp</div>
-        <div class="profile_text">
+        <div class="console_name">岩見建汰</div>
+        <div class="console_image"><img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}"></div>
+        <div class="console_text">青森県八戸市出身。函館で大学院生をしています。</div>
+        <div class="console_text">アプリやサービス等を創ることが大好きです。</div>
+        <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
+        <div class="console_text"></div>
+        <div class="console_text">言語：C, Swift, Java, JavaScript, HTML, CSS, python</div>
+        <div class="console_text">資格：ITパスポート, 基本情報技術者試験, 応用情報技術者試験</div>
+        <div class="console_text">趣味：コーディング, 写真撮影, ゲーム, 映画鑑賞</div>
+        <div class="console_text"></div>
+        <div class="console_text">連絡先：b1013068@fun.ac.jp または iwami@pblsummit.jp</div>
+        <div class="console_text">
           <a href="https://www.facebook.com/kenta.iwami.5">Facebook Link</a>
           <a href="https://github.com/kentaiwami">GitHub Link</a>
         </div>
