--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -57,7 +57,7 @@ a:hover {
   font-size: 10vmin;
 }
 
-.sub_title:before, .sub_title_error:before, .title:before , .title_error:before, .section_title:before, .console_top:before, .profile_text:before , .profile_name:before {
+.sub_title:before, .sub_title_error:before, .title:before , .title_error:before, .section_title:before, .console_top:before, .console_text:before , .console_name:before {
   content: "$ ";
 }
 
@@ -260,7 +260,7 @@ figure:hover figcaption {
 
 
 /*************** section4(Profile) ***************/
-.profile_console {
+.console_area {
   background-color: #111;
   width: 100%;
   border: 1px solid #FFF;
@@ -284,7 +284,7 @@ figure:hover figcaption {
   padding: 10px;
 }
 
-.profile_image {
+.console_image {
   width: 100%;
   display: block;
   margin-bottom: 5vmin;
@@ -292,13 +292,13 @@ figure:hover figcaption {
 }
 
 /* section1にてbefore擬似要素を追加 */
-.profile_text a {
+.console_text a {
   text-decoration: underline;
   margin-right: 10px;
 }
 
 /* section1にてbefore擬似要素を追加 */
-.profile_name {
+.console_name {
   padding-top: 5vmin;
   font-size: 8vmin;
 }
