profileのリンクを文字からmoreと同じものにした

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -208,10 +208,35 @@
         <div class="console_text">趣味：コーディング, 写真撮影, ゲーム, 映画鑑賞</div>
         <div class="console_text"></div>
         <div class="console_text">連絡先：b1013068@fun.ac.jp または iwami@pblsummit.jp</div>
+
         <div class="console_text">
-          <a href="https://www.facebook.com/kenta.iwami.5">Facebook Link</a>
-          <a href="https://github.com/kentaiwami">GitHub Link</a>
+          <a class="link" href="https://www.facebook.com/kenta.iwami.5">
+            <div class="box">
+              <div>Facebook</div>
+              <div class="bd10 bd">
+                <div class="bdT"></div>
+                <div class="bdB"></div>
+                <div class="bdR"></div>
+                <div class="bdL"></div>
+              </div>
+             </div>
+          </a>
         </div>
+
+        <div class="console_text">
+          <a class="link" href="https://github.com/kentaiwami">
+            <div class="box">
+              <div>GitHub</div>
+              <div class="bd10 bd">
+                <div class="bdT"></div>
+                <div class="bdB"></div>
+                <div class="bdR"></div>
+                <div class="bdL"></div>
+              </div>
+             </div>
+          </a>
+        </div>
+
       </div>
     </div>
   </section>
