--- a/portfolio/templates/404.html
+++ b/portfolio/templates/404.html
@@ -10,9 +10,13 @@
         speed: speed_define,
         text: '404エラー',
       });
-      $('#sub_title').typist({
+      $('#sub_title1').typist({
         speed: speed_define,
-        text: 'Page not found'
+        text: 'アクセスしたページは'
+      });
+      $('#sub_title2').typist({
+        speed: speed_define,
+        text: '見つかりませんでした'
       });
     });
     </script>
