--- a/portfolio/templates/error_base.html
+++ b/portfolio/templates/error_base.html
@@ -19,11 +19,12 @@
   <section class="cover_error">
     <div class="title_area">
       <div class="title_error" id="title"></div>
-      <div class="sub_title_error" id="sub_title"></div>
+      <div class="sub_title_error" id="sub_title1"></div>
+        <div class="sub_title_error" id="sub_title2"></div>
     </div>
 
-    <div class="link_box">
-      <a class="link_cover" href="{% url 'portfolio:index' %}">
+    <div class="link_error">
+      <a class="link_cover_error" href="{% url 'portfolio:index' %}">
         <div class="box">
           Top
           <div class="bd10 bd">
