各種エラーページの作成を完了

--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -310,6 +310,10 @@ figure:hover figcaption {
 
 
 
+
+/************************************************************
+                      各種エラーページ
+************************************************************/
 .link_cover_error:hover {
   opacity: 1.0;
   color: #0F0;
