--- a/portfolio/templates/error_base.html
+++ b/portfolio/templates/error_base.html
@@ -19,8 +19,8 @@
   <section class="cover_error">
     <div class="title_area">
       <div class="title_error" id="title"></div>
-      <div class="sub_title_error" id="sub_title1"></div>
-        <div class="sub_title_error" id="sub_title2"></div>
+      <div class="sub_title_error" id="sub_title_error1"></div>
+        <div class="sub_title_error" id="sub_title_error2"></div>
     </div>
 
     <div class="link_error">
