Engineer Worksを6つから4つの表示に変更

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -113,17 +113,17 @@
       {% endfor %}
     </div>
 
-    <a class="link" href="{% url 'portfolio:engineer_works_all' %}">
-      <div class="box">
-        <div>more</div>
-        <div class="bd10 bd">
-          <div class="bdT"></div>
-          <div class="bdB"></div>
-          <div class="bdR"></div>
-          <div class="bdL"></div>
-        </div>
-      </div>
-    </a>
+    <!--<a class="link" href="{% url 'portfolio:engineer_works_all' %}">-->
+      <!--<div class="box">-->
+        <!--<div>more</div>-->
+        <!--<div class="bd10 bd">-->
+          <!--<div class="bdT"></div>-->
+          <!--<div class="bdB"></div>-->
+          <!--<div class="bdR"></div>-->
+          <!--<div class="bdL"></div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</a>-->
   </section>
 
   <section class="container" id="3">  <!--Photographer Works-->
