--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -99,7 +99,6 @@
     <div class="row">
       {% for product in old_product_list %}
       <div class="col-md-6">
-      <!--<div class="col-6">-->
         <a href="{% url 'portfolio:engineer_work_detail' product.pk %}">
         <figure>
           <img src="/media/{{ product.top_image }}" class="img-fluid" alt="">
@@ -198,7 +197,11 @@
 
       <div class="console">
         <div class="console_name">岩見建汰</div>
-        <div class="console_image"><img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}"></div>
+
+        <div class="container">
+          <div class="console_image"><img class="img-fluid-no-border" src="{% static 'portfolio/img/photo.png' %}"></div>
+        </div>
+
         <div class="console_text">青森県八戸市出身。函館で大学院生をしています。</div>
         <div class="console_text">アプリやサービス等を創ることが大好きです。</div>
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
