--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -212,34 +212,30 @@
         <div class="console_text"></div>
         <div class="console_text">連絡先：b1013068@fun.ac.jp または iwami@pblsummit.jp</div>
 
-        <div class="console_text">
-          <a class="link" href="https://www.facebook.com/kenta.iwami.5">
-            <div class="box">
-              <div>Facebook</div>
-              <div class="bd10 bd">
-                <div class="bdT"></div>
-                <div class="bdB"></div>
-                <div class="bdR"></div>
-                <div class="bdL"></div>
-              </div>
-             </div>
-          </a>
-        </div>
+        <div class="row">
+          <div class="col">
+            <div class="console_text_link">
+              <a class="link" href="https://www.facebook.com/kenta.iwami.5">
+                <div class="box">
+                  <div class="link_name">Facebook</div>
+                  <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
+                </div>
+              </a>
+            </div>
+          </div>
 
-        <div class="console_text">
-          <a class="link" href="https://github.com/kentaiwami">
-            <div class="box">
-              <div>GitHub</div>
-              <div class="bd10 bd">
-                <div class="bdT"></div>
-                <div class="bdB"></div>
-                <div class="bdR"></div>
-                <div class="bdL"></div>
-              </div>
-             </div>
-          </a>
-        </div>
+          <div class="col">
+            <div class="console_text_link">
+              <a class="link" href="https://github.com/kentaiwami">
+                <div class="box">
+                  <div class="link_name">GitHub</div>
+                  <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
+                </div>
+              </a>
+            </div>
+          </div>
 
+        </div>
       </div>
     </div>
   </section>
