work_detailのリポジトリリンクを他のリンクと同様に修正

--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -63,16 +63,11 @@
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
 
-        <div class="console_text">
+        <div class="console_text_link">
           <a class="link" href="{{ product.link }}">
             <div class="box">
-              <div>Repository</div>
-              <div class="bd10 bd">
-                <div class="bdT"></div>
-                <div class="bdB"></div>
-                <div class="bdR"></div>
-                <div class="bdL"></div>
-              </div>
+              <div class="link_name">Repository</div>
+              <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
              </div>
           </a>
         </div>
