開発環境等を追加した

--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -313,6 +313,14 @@ figure:hover figcaption {
   text-align: center;
 }
 
+.default_link {
+  text-decoration: underline;
+}
+
+.default_link:hover {
+  text-decoration: underline;
+}
+
 
 /************************************************************
                       各種エラーページ
