--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -62,11 +62,17 @@
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
+        
+        <div class="console_name"></div>
+        <div class="console_text">開発環境：Xcode8.2.1</div>
+        <div class="console_text">使用言語：Swift2.3</div>
+        <div class="console_text">製作期間：yyyy/mm/dd 〜 yyyy/mm/dd</div>
+        <div class="console_text">URL：<a class="default_link" href="{{ product.link }}">{{ product.link }}</a></div>
 
         <div class="console_text_link">
-          <a class="link" href="{{ product.link }}">
+          <a class="link" href="{% url 'portfolio:index' %}#2">
             <div class="box">
-              <div class="link_name">Repository</div>
+              <div class="link_name">Back</div>
               <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
              </div>
           </a>
