CSSにコメント追加，detailテンプレから不要なコメント削除

--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -313,6 +313,10 @@ figure:hover figcaption {
   text-align: center;
 }
 
+
+/************************************************************
+                  view.engineer_work_detail
+************************************************************/
 .default_link {
   text-decoration: underline;
 }
