--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -24,7 +24,7 @@
   </script>
 </head>
 <body>
-  <section class="container" id="4">  <!--Profile-->
+  <section class="container" id="4">
     <div class="section_title" id="e_work_title"></div>
 
     <div class="console_area">
@@ -41,7 +41,6 @@
           </div>
           {% endfor %}
         </div>
-
 
         <div class="container">
           <div class="console_image"><img class="img-fluid-no-border" src="/media/{{ image_file_S3.image }}"></div>
@@ -62,7 +61,7 @@
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
-        
+
         <div class="console_name"></div>
         <div class="console_text">開発環境：Xcode8.2.1</div>
         <div class="console_text">使用言語：Swift2.3</div>
