--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -52,7 +52,7 @@
         <div class="console_name">{{ product_detail.product_background_concept }}</div>
         <div class="console_text">{{ product_detail.product_background_detail }}</div>
 
-        <div class="console_name"></div>
+        <div class="console_text_no_before"></div>
         <div class="console_text">開発環境：{{ product_detail.product_development_environment }}</div>
         <div class="console_text">使用言語：{{ product_detail.product_development_language }}</div>
         <div class="console_text">製作期間：{{ product_detail.product_creation_time }}</div>
