--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -10,11 +10,10 @@ body {
   text-align: center;
   text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
 }
+
 /* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
+a, a:focus, a:hover {
+  color: #FFF;
   text-decoration: none;
 }
 a:hover {
