--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -17,7 +17,7 @@ a, a:focus, a:hover {
   text-decoration: none;
 }
 a:hover {
-  opacity: 0.5;
+  opacity: .5;
 }
 
 @font-face {
@@ -46,7 +46,7 @@ a:hover {
   width: 85%;
   height: auto;
   padding: 5vmin;
-  border-width: 0.5vmin;
+  border-width: .5vmin;
   border-style: solid;
   font-family: "MyFont";
   font-size: 10vmin;
@@ -82,9 +82,9 @@ a:hover {
   border-bottom: 2px dotted #FFF;
   border-left: 2px dotted #FFF;
   box-sizing: border-box;
+  opacity: 0;
   transform: rotate(-45deg);
   animation: sdb 2s infinite;
-  opacity: 0;
 }
 a span:nth-of-type(1) {
   animation-delay: 0s;
@@ -114,19 +114,20 @@ a span:nth-of-type(3) {
 /* section1にて擬似要素の追加 */
 .section_title {
   width: 100%;
+  margin: 2.5rem 0rem;
   font-family: "MyFont";
   font-size: 10vmin;
-  margin: 2.5rem 0rem;
 }
 
 .col-md-6 {
   margin: .75rem 0;
 }
+
 .img-fluid {
   width: 100%;
   height: 100%;
-  border: 2px solid;
   padding: .5rem;
+  border: 2px solid;
   object-fit: contain;
 }
 
@@ -138,37 +139,35 @@ a span:nth-of-type(3) {
   object-fit: contain;
 }
 
+/*画像のhover関係*/
 figure {
-  max-width: 80.9vmin;
+  display: block;
   position: relative;
+  max-width: 80.9vmin;
   height: 35vmin;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   background: #000;
-  overflow: hidden;
-  display: block;
 }
 figcaption {
   position: absolute;
+  z-index: 2;
   top: -100%;
   left: 0;
-  z-index: 2;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,.6);
-  -webkit-transition: .3s;
-  transition: .3s;
-  opacity: 1;
   margin: 0 auto;
   padding-top: 10vmin;
-  font-size: 3vmin;
+  background: rgba(0,0,0,.6);
   font-family: "MyFont";
+  font-size: 3vmin;
+  opacity: 1;
+  transition: .3s;
 }
-
 figcaption p {
   margin: 5vmin;
 }
-
 figure:hover figcaption {
   top: 0;
   left: 0;
@@ -176,22 +175,21 @@ figure:hover figcaption {
 
 /* 各種リンク用 */
 .link:hover {
-  opacity: 1.0;
+  opacity: 1;
 }
 .box {
+  display: inline-block;
+  position: relative;
+  margin-top: 2.5rem;
+  padding: 0rem 1rem;
   font-family: "MyFont";
   font-size: 5vmin;
-  padding: 0rem 1rem;
-  margin-top: 2.5rem;
   text-align: center; 
-  position: relative;
-  display: inline-block;
 }
 .bd div {
   position: absolute;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
   border: solid 1px;
+  transition: all .3s;
 }
 .bd div.bdT {
   width: 100%;
@@ -202,25 +200,23 @@ figure:hover figcaption {
 .bd div.bdB{
   width: 100%;
   height: 1px;
-  bottom: 0;
   right: 0;
+  bottom: 0;
 }
 .bd div.bdR {
-  height: 100%;
   width: 1px;
-  right: 0;
+  height: 100%;
   top: 0;
+  right: 0;
 }
 .bd div.bdL {
-  height: 100%;
   width: 1px;
-  left: 0;
+  height: 100%;
   bottom: 0;
+  left: 0;
 }
-
 .bd10 div {
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
+  transition: all .2s;
 }
 .box:hover .bd10 div.bdT {
   width: 1px;
