section3のプロパティ修正

--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -238,7 +238,7 @@ figure:hover figcaption {
 
 /*************** section3(Photographer Works) ***************/
 .col-md-3 {
-  margin: .75rem 0;
+  margin: .75rem 0rem;
 }
 
 
