--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -300,17 +300,13 @@ div.console_text:before{
 /************************************************************
                   view.engineer_work_detail
 ************************************************************/
-.default_link {
-  text-decoration: underline;
-}
-
-.default_link:hover {
+.default_link, .default_link:hover {
   text-decoration: underline;
 }
 
 .console_text_no_before {
-  margin: 3vmin 0vmin;
   display: inline-block;
+  margin: 3vmin 0vmin;
 }
 
 
@@ -318,8 +314,8 @@ div.console_text:before{
                       各種エラーページ
 ************************************************************/
 .link_cover_error:hover {
-  opacity: 1.0;
   color: #0F0;
+  opacity: 1.0;
 }
 
 .link_cover_error {
@@ -328,12 +324,13 @@ div.console_text:before{
 
 .link_error {
   position: absolute;
-  left: 0;
-  right: 0;
   top: 80%;
+  right: 0;
+  left: 0;
   color: #0F0;
 }
 
+/*MARK*/
 .cover_error {
   width: 100vw;
   height: 100vh;
