--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -11,9 +11,9 @@
 
   <title>Kenta Portfolio</title>
 
-  <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'portfolio/js/jquery.typist.js' %}"></script>
-  <script type="text/javascript" src="{% static 'portfolio/js/index.js' %}"></script>
+  <script src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
+  <script src="{% static 'portfolio/js/jquery.typist.js' %}"></script>
+  <script src="{% static 'portfolio/js/index.js' %}"></script>
 
 
 
