--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -1,4 +1,6 @@
-/*************** Globals ***************/
+/************************************************************
+                        Globals
+************************************************************/
 html,
 body {
   height: 100%;
@@ -27,9 +29,8 @@ a:hover {
 
 
 /************************************************************
-                          view.index
+                        カバーページ
 ************************************************************/
-/*************** section1(cover) ***************/
 .cover {
   display: block;
   width: 100vw;
@@ -38,6 +39,17 @@ a:hover {
   background-color: #000;
 }
 
+.cover_error {
+  width: 100vw;
+  height: 100vh;
+  margin: auto;
+  color: #0F0;
+}
+
+
+/************************************************************
+                        タイトル
+************************************************************/
 .title_area {
   display: block;
   position: absolute;
@@ -54,12 +66,27 @@ a:hover {
   transform: translate(-50%, -50%);
 }
 
-.sub_title:before, .sub_title_error:before, .title:before , .title_error:before,
-.section_title:before, .console_top:before, .console_name:before, .link_name:before {
+.title:before, .title_error:before,
+.sub_title:before, .sub_title_error:before,
+.section_title:before {
   content: "$ ";
 }
 
-/* Scrollの文字と矢印 */
+.section_title {
+  width: 100%;
+  margin: 2.5rem 0rem;
+  font-family: "MyFont";
+  font-size: 10vmin;
+}
+
+.sub_title_error {
+  font-size: 6.5vmin;
+}
+
+
+/************************************************************
+                            Scroll
+************************************************************/
 .arrow {
   display: inline-block;
   position: absolute;
@@ -72,6 +99,7 @@ a:hover {
   font-size: 8vmin;
   transform: translate(0, -50%); 
 }
+
 .arrow span {
   position: absolute;
   top: 0;
@@ -86,17 +114,21 @@ a:hover {
   transform: rotate(-45deg);
   animation: sdb 2s infinite;
 }
+
 a span:nth-of-type(1) {
   animation-delay: 0s;
 }
+
 a span:nth-of-type(2) {
   top: 16px;
   animation-delay: .15s;
 }
+
 a span:nth-of-type(3) {
   top: 32px;
   animation-delay: .3s;
 }
+
 @keyframes sdb {
   0% {
     opacity: 0;
@@ -110,19 +142,21 @@ a span:nth-of-type(3) {
 }
 
 
-/*************** section2(Engineer Works) ***************/
-/* section1にて擬似要素の追加 */
-.section_title {
-  width: 100%;
-  margin: 2.5rem 0rem;
-  font-family: "MyFont";
-  font-size: 10vmin;
-}
-
+/************************************************************
+                            grid
+************************************************************/
 .col-md-6 {
   margin: .75rem 0;
 }
 
+.col-md-3 {
+  margin: .75rem 0rem;
+}
+
+
+/************************************************************
+                            image
+************************************************************/
 .img-fluid {
   width: 100%;
   height: 100%;
@@ -131,7 +165,6 @@ a span:nth-of-type(3) {
   object-fit: contain;
 }
 
-/*他セクションで使用*/
 .img-fluid-no-border {
   width: 100%;
   height: 100%;
@@ -139,7 +172,7 @@ a span:nth-of-type(3) {
   object-fit: contain;
 }
 
-/*画像のhover関係*/
+/* 画像のhover */
 figure {
   display: block;
   position: relative;
@@ -150,6 +183,7 @@ figure {
   padding: 0;
   background: #000;
 }
+
 figcaption {
   position: absolute;
   z-index: 2;
@@ -165,15 +199,19 @@ figcaption {
   opacity: 1;
   transition: .3s;
 }
+
 figcaption p {
   margin: 5vmin;
 }
+
 figure:hover figcaption {
   top: 0;
   left: 0;
 }
 
-/* 各種リンク用 */
+/************************************************************
+                            link
+************************************************************/
 .link:hover {
   opacity: 1;
 }
@@ -235,84 +273,6 @@ figure:hover figcaption {
   height: 1px;
 }
 
-
-/*************** section3(Photographer Works) ***************/
-.col-md-3 {
-  margin: .75rem 0rem;
-}
-
-
-/*************** section4(Profile) ***************/
-.console_area {
-  display: inline-block;
-  width: 100%;
-  border: 1px solid #FFF;
-  background-color: #111;
-  font-family: "MyFont";
-  font-size: 3vmin;
-  text-align: left;
-}
-
-/* section1にてbefore擬似要素を追加 */
-.console_top {
-  display: inline-block;
-  width: 100%;
-  height: auto;
-  padding-left: 10px;
-  border-bottom: 1px solid #FFF;
-  text-align: center;
-}
-
-.console {
-  padding: 10px;
-}
-
-.console_image {
-  display: block;
-  width: 100%;
-  height: auto;
-  margin: 5vmin 0vmin;
-}
-
-div.console_text{
-  position:relative;
-  padding-left:1em;
-}
-
-div.console_text:before{
-  position:absolute;
-  top:0;
-  left:0;
-  content:"$ ";
-}
-
-/* section1にてbefore擬似要素を追加 */
-.console_name {
-  padding-top: 5vmin;
-  font-size: 5vmin;
-}
-
-.console_text_link {
-  text-align: center;
-}
-
-
-/************************************************************
-                  view.engineer_work_detail
-************************************************************/
-.default_link, .default_link:hover {
-  text-decoration: underline;
-}
-
-.console_text_no_before {
-  display: inline-block;
-  margin: 3vmin 0vmin;
-}
-
-
-/************************************************************
-                      各種エラーページ
-************************************************************/
 .link_cover_error:hover {
   color: #0F0;
   opacity: 1.0;
@@ -330,21 +290,86 @@ div.console_text:before{
   color: #0F0;
 }
 
-.cover_error {
-  width: 100vw;
-  height: 100vh;
-  margin: auto;
-  color: #0F0;
+.default_link, .default_link:hover {
+  text-decoration: underline;
 }
 
-/*section1にて擬似要素追加*/
-.sub_title_error {
-  font-size: 6.5vmin;
+.link_name:before {
+  content: "$ ";
 }
 
 
+/************************************************************
+                          Console
+************************************************************/
+.console_area {
+  display: inline-block;
+  width: 100%;
+  border: 1px solid #FFF;
+  background-color: #111;
+  font-family: "MyFont";
+  font-size: 3vmin;
+  text-align: left;
+}
 
-/*************** @media ***************/
+.console_top {
+  display: inline-block;
+  width: 100%;
+  height: auto;
+  padding-left: 10px;
+  border-bottom: 1px solid #FFF;
+  text-align: center;
+}
+
+.console_top:before {
+  content: "$ ";
+}
+
+.console {
+  padding: 10px;
+}
+
+.console_image {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin: 5vmin 0vmin;
+}
+
+.console_name {
+  padding-top: 5vmin;
+  font-size: 5vmin;
+}
+
+.console_name:before {
+  content: "$ ";
+}
+
+div.console_text{
+  position:relative;
+  padding-left:1em;
+}
+
+div.console_text:before{
+  position:absolute;
+  top:0;
+  left:0;
+  content:"$ ";
+}
+
+.console_text_link {
+  text-align: center;
+}
+
+.console_text_no_before {
+  display: inline-block;
+  margin: 3vmin 0vmin;
+}
+
+
+/************************************************************
+                          @media
+************************************************************/
 @media screen and (max-width: 1200px) {
   /* coverのスクロール促し */
   .arrow {
