--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -126,61 +126,62 @@
 
     <div class="row">
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
+      </div>
+
+      <div class="col-md-3">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
-      </div>
-      <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
-      </div>
-      <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
-      </div>
-      <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
-      </div>
-      <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
       <div class="col-md-3">
-        <img class="img-fluid" src="{% static 'portfolio/img/photo.png' %}">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-3">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
+      </div>
+      <div class="col-md-3">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
+      </div>
+      <div class="col-md-3">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
+      </div>
+      <div class="col-md-3">
+        <img class="img_slow" src="{% static 'portfolio/img/photo.png' %}">
       </div>
     </div>
   </section>
